# snowflake-ml-example-project

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  register_deploy_dag.py  setup_db.py
docs/: business_requirements.md
ml_project/: load_data.py  setup_db.py  train_model.py  utils.py
scratch/: eda.ipynb
