[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_project"
description = "An example Snowflake ML project."
version = "0.1.0"
readme = "README.md"
dependencies = [
    "numpy==1.26.3",
    "seaborn==0.12.2",
    "snowflake==0.9.0",
    "snowflake-core==0.9.0",
    "snowflake-ml-python==1.4.0",
    "snowflake-snowpark-python==1.16.0",
    "scikit-learn==1.3.0",
    "xgboost==1.7.3"
]

[tool.setuptools.packages.find]
include = ["ml_project"]

[project.optional-dependencies]
dev = ["nbqa[toolchain]", "jupyter", "pre-commit"]
